<resources>
    <string name="app_name">Food Delivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="text_is_null_binding_first_fragment">FragmentFirstBinding is null</string>
    <string name="text_is_null_binding_second_fragment">FragmentSecondBinding is null</string>
    <string name="text_is_null_binding_third_fragment">FragmentThirdBinding is null</string>
    <string name="text_is_null_binding_main_fragment">FragmentMainBinding is null</string>
    <string name="text_is_null_binding_login_fragment">FragmentLoginBinding is null</string>
    <string name="text_is_null_binding_register_fragment">FragmentRegisterBinding is null</string>
    <string name="text_is_null_binding_register_phone_fragment">
        FragmentRegisterPhoneBinding is null
    </string>
    <string name="text_is_null_binding_verify_code_fragment">
        FragmentVerifyCodeBinding is null
    </string>
    <string name="text_is_null_binding_view_pager_opened_fragment">
        FragmentViewPagerOpenedBinding is null
    </string>
    <string name="text_is_null_binding_view_reset_password_fragment">
        FragmentRestPasswordBinding is null
    </string>
    <string name="text_error_no_implements_interface">
        Must implements interface NavigateHelper
    </string>

    <string name="text_key_shared_preferences_on_boarding">
        onBoarding
    </string>
    <string name="text_extra_finished_on_boarding">
        Finished
    </string>


    <string name="text_delicious_food">Вкусная еда</string>
    <string name="text_desc_first_view_pager">Вкуснейшая и свежайшая еда, у Вас на столе</string>
    <string name="text_btn_next">Далее</string>
    <string name="text_fast_delivery">Быстрая доставка</string>
    <string name="text_desc_second_view_pager">Доставим быстро, не успеете проголодаться</string>
    <string name="text_convenient_payment">Удобная оплата</string>
    <string name="text_desc_third_view_pager">Можете оплатить любым удобным способом</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="text_email_hint">Email</string>
    <string name="text_phone_hint">Номер телефона</string>
    <string name="text_password_hint">Password</string>
    <string name="text_hint_forgot_password">Забыли пароль?</string>
    <string name="text_sign_in_with_phone">Войти по номеру телефона</string>
    <string name="text_sign_up">Зарегестрироваться</string>
    <string name="text_sign_in">Войти</string>
    <string name="text_password_confirm_hint">Пароль повторно</string>
    <string name="text_confirm_register">Вы успешно зарегестрировались</string>
    <string name="text_error_register">Произошла ошибка при регистрации</string>
    <string name="text_error_password_confirm">Пароли должны совпадать</string>
    <string name="text_error_password_and_login_is_password">
        Логин и пароль не должны быть пустыми
    </string>
    <string name="text_process_register">Идёт процесс регистрации</string>
    <string name="text_get_code">Получить код</string>
    <string name="text_error_phone_is_empty">
        Номер телефона должен быть заполнен
    </string>
    <string name="text_error_phone_is_length_13">
        Номер телефона должен содержать 13 символов
    </string>
    <string name="text_sign_in_phone">Вход по номеру телефона</string>
    <string name="text_sign_in_email">Вход по email</string>
    <string name="text_enter_code">Введите код</string>
    <string name="text_code_hint">Код</string>
    <string name="text_post_code">Отправить код</string>
    <string name="text_error_register_phone">
        Ошибка регистрации
    </string>
    <string name="text_error_sign_in">Произошла ошибка при входе</string>
    <string name="text_error_code_is_empty">Поле - Код, не должно быть пустым</string>
    <string name="text_rest_password">Смена пароля</string>
    <string name="text_rest">Сменить</string>
    <string name="text_error_reset_password">Произошла ошибка, попробуйте снова</string>
    <string name="text_success_reset_password">Проверьте Вашу почту</string>
    <string name="text_email_is_not_empty">Поле - email не должно быть пустым</string>
    <string name="text_exit">Выйти</string>
    <string name="text_error_has_occurred">Произошла ошибка</string>
    <string name="text_success">Успешно</string>
    <string name="text_go_to_main_nav_item">На главную</string>
    <string name="text_go_to_profile_nav_item">Профиль</string>
    <string name="text_go_to_cart_nav_item">Корзина</string>
    <string name="text_go_to_help_nav_item">Помощь</string>
    <string name="text_exit_nav_item">Выйти</string>
    <string name="text_go_to_order_nav_item">Заказы</string>
    <string name="text_go_to_favourite_nav_item">Избранное</string>
    <string name="text_role_user">Наш любимый клиент, Привет тебе и хорошего дня:)</string>
</resources>